# financeJulia

./: .gitignore  01_save_data.jl  02_visualize.jl  03_cora.jl  03_graph_NN.jl  Manifest.toml  Project.toml  README.md  cora.jl  data.jl  explore.ipynb  gnnmodel.bson  labels.txt  load.py  pyproject.toml  viz.jl
data/processed/: tfinance.jld2
preprocess/: explore.ipynb
