[tool.poetry]
name = "financegraph"
version = "0.1.0"
description = ""
authors = ["R.Grouls <raoul.grouls@businessdecision.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
dgl = {file = "dgl-0.8.1-cp38-cp38-macosx_10_9_x86_64.whl"}
torch = "^1.12.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
